@@ -260,9 +260,13 @@ static Class	NSMutableDataMallocClass;
   uint8_t	byteCount = 0;
   NSUInteger	i;
   NSUInteger	offset = 0;
-  uint32_t	size = objc_sizeof_type(type);
-  uint32_t	version = [self systemVersion];
+  uint32_t	size;
+  uint32_t	version;
   uchar		info;
+
+  type = GSSkipTypeQualifierAndLayoutInfo(type);
+  size = objc_sizeof_type(type);
+  version = [self systemVersion];
 
   if (12402 == version)
     {
@@ -374,6 +378,7 @@ static Class	NSMutableDataMallocClass;
 - (void) encodeValueOfObjCType: (const char*)type
 			    at: (const void*)buf
 {
+  type = GSSkipTypeQualifierAndLayoutInfo(type);
   switch (*type)
     {
       case _C_ID:
